--- a/style.css
+++ b/style.css
@@ -56,9 +56,6 @@ html {
 /* home page */
 
 
-.boxForm {
-    gap: 5em;
-}
 
 
 .container {
@@ -135,7 +132,7 @@ h4 {
 
 .questionMort {
     height: 100vh;
-    margin-top: 3rem;
+    padding-top: 10vh;
 }
 
 .questionfinal {
@@ -162,17 +159,11 @@ h4 {
 .choco {
     display: flex;
     justify-content: center;
-
-
 }
 
 .choco img {
-
     width: 40vw;
-
 }
-
-
 
 .container .button {
     display: flex;
@@ -195,8 +186,10 @@ h4 {
     font-size: 110%;
     color: rgb(236, 11, 11);
     position: absolute;
-    left: 23%;
-    top: 30%;
+    left: 38%;
+    top: 25%;
+    cursor: pointer;
+
 }
 
 
@@ -213,7 +206,9 @@ h4 {
     position: absolute;
     left: 73%;
     top: 20%;
+    cursor: pointer;
 }
+
 
 
 
@@ -221,33 +216,9 @@ h4 {
 /* choose team */
 .team {
     padding-top: 20vh;
-<<<<<<< HEAD
-=======
-
->>>>>>> 45acfc99d84dcc3e9b9a165f7ef24dbbc5eb79b9
-}
-
-.questionMort {
-    height: 100vh;
-    margin-top: 3rem;
 
 }
 
-.questionfinal {
-    display: grid;
-    height: 70vh;
-    grid-template-rows: 1fr, 1fr, 1fr;
-    grid-template-columns: 1fr, 1fr, 1fr;
-    align-items: center;
-    margin: 5vw;
-    background-color: var(--primary);
-    box-shadow: 10px 10px 25px 10px rgba(0, 0, 0, 0.361);
-    border: 3px solid rgba(255, 255, 255, 0.724);
-    background: var(--primary);
-    width: 90vw;
-    border-radius: 1em;
-
-}
 
 .bigContainer {
     width: 100%;
@@ -255,17 +226,18 @@ h4 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 8em;
+    gap: 12em;
 }
 
 .card {
     box-shadow: 10px 10px 25px 10px rgba(0, 0, 0, 0.361);
     border: 3px solid rgba(255, 255, 255, 0.724);
     background: #f4f6ed;
-    width: 18rem;
-    height: 28em;
+    width: 85vw;
+    height: 65vh;
     border-radius: 1em;
 }
+
 
 
 
@@ -281,35 +253,24 @@ h4 {
 
 .containerCard:nth-child(1) h2 {
     text-align: center;
-    /* padding: 50px; */
 }
 
 
 
-.form h2 {
-    position: relative;
+.inputBox h2 {
     display: flex;
     justify-content: center;
-    margin-top: 1.5em;
-    margin-bottom: 2em;
-    color: #131734;
-}
-
-.form h2::before {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    width: 4em;
-    height: 0.12em;
-    background: #131734;
+    color: var(--primary);
+    margin-top: 1em;
 }
 
 .inputBox {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 1.5em;
+    margin-top: 3em;
 }
+
 
 .inputBox input {
     background: rgba(255, 255, 255, 0.1);
@@ -320,7 +281,6 @@ h4 {
     box-shadow: 5px 5px 20px 2px rgba(0, 0, 0, 0.361);
     border: 1px solid rgba(255, 255, 255, 0.724);
     font-size: 1em;
-    margin-top: 1em;
 }
 
 .inputBox button {
@@ -334,138 +294,19 @@ h4 {
     color: var(--secondary);
 }
 
-.boxTeam h2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 1.5em;
-    margin-bottom: 2em;
-    color: #131734;
-}
 
-<<<<<<< HEAD
-@media screen and (min-width: 768px) {
-    .header div{
-        height: 12vh;
-    }
-    .header ion-icon{
-        font-size: 3.5em;
-    }
-    .header div a{
-        left: 15%;
-    }
-    .container {
-        padding-top: initial;
-        gap: 6em;
-    }
-    .container a{
-        font-size: 2.5em;
-    }
-    
-    .container ion-icon{
-        font-size: 3em;
-    }
-    .containerTitle{
-        height: 18em;
-    }
-    .team{
-        padding-top: 24vh;
-        height: 100vh;
-    }
-    .bigContainer{
-        gap: 2em;
-    }
-=======
+
 /* slide */
 
-.quizz1 {
-    height: 70vh;
-    padding: 50px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgb(255, 0, 0);
->>>>>>> 45acfc99d84dcc3e9b9a165f7ef24dbbc5eb79b9
-}
 
 
-.question {
-    max-width: 100%;
-    height: 70vh;
-    /* display: none; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    text-align: center;
-}
 
-.stringQuestion {
-    border-radius: 50% 20% / 10% 40%;
-    background-color: rgb(228, 19, 200);
-    padding: 10px;
-    margin: 10px;
-}
 
-.fullAnswer {
-    display: grid;
-    height: 70vh;
-    /* align-items: center; */
-    /* justify-content: center;
-    flex-direction: column; */
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    /* grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr; */
-    border: 1px solid rgb(0, 252, 13);
-    text-align: center;
-}
 
-.wrongAnswer {
-    padding: 50px;
-    margin: 10px;
-    border-radius: 50% 20% / 10% 40%;
-    background-color: rgb(0, 26, 255);
-    cursor: pointer;
-}
 
-.wrongAnswerRed {
-    padding: 50px;
-    margin: 10px;
-    border-radius: 50% 20% / 10% 40%;
-    background-color: rgb(255, 0, 0);
-    cursor: pointer;
-}
 
-.rightAnswer {
-    padding: 50px;
-    margin: 10px;
-    border-radius: 50% 20% / 10% 40%;
-    background-color: rgb(0, 26, 255);
-    cursor: pointer;
-}
 
-.rightAnswerGreen {
-    padding: 50px;
-    margin: 10px;
-    border-radius: 50% 20% / 10% 40%;
-    background-color: rgb(9, 255, 0);
-    cursor: pointer;
-}
 
-.cont-btn {
-    width: 50%;
-    height: auto;
-    border: 1px solid #000;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
-}
-
-.btn-nav {
-    font-size: 50px;
-    margin: 0 15px;
-    cursor: pointer;
-}
 
 .footer {
     background: #131734;
@@ -486,36 +327,31 @@ h4 {
 .modal {
     display: none;
     position: absolute;
-    top: 210%;
+    top: 207.8%;
     left: center;
 }
 
 .classModal {
     border: black solid 1px;
-    padding: 2em;
+    padding: 1em;
     background: #fff;
     border-radius: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 85vw;
+    height: 65vh;
 }
-
-<<<<<<< HEAD
-=======
-
->>>>>>> 45acfc99d84dcc3e9b9a165f7ef24dbbc5eb79b9
-
 .classModal h3 {
     margin-top: 1em;
-    margin-bottom: 1em;
-    font-size: 1em;
+    margin-bottom: 0.5em;
+    font-size: 2em;
 }
 
 .classModal img {
-    width: 10em;
+    width: 17em;
 }
 
-<<<<<<< HEAD
 .footer {
     background: #131734;
     display: none;
@@ -529,13 +365,10 @@ h4 {
 }
 
 .footer img{
-    width: 1em;
+    width: 5em;
 }
 
-#btnClose{
-=======
 #btnClose {
->>>>>>> 45acfc99d84dcc3e9b9a165f7ef24dbbc5eb79b9
     display: flex;
     align-items: center;
     justify-content: center;
@@ -544,10 +377,10 @@ h4 {
     border: solid 1px black;
     border-radius: 0.5em;
     background: var(--primary);
-    width: 3rem;
+    width: 6em;
     height: 2rem;
     color: white;
-    font-size: 1em;
+    font-size: 2em;
     box-shadow: 0 6px #303c91;
     padding: 0.6em;
 }
@@ -560,6 +393,15 @@ h4 {
 #btnClose:active {
     transform: translateY(8px);
     box-shadow: 0 4px #212967;
+}
+
+a{
+    text-decoration: none;
+    color: var(--secondary);
+}
+
+a:visited{
+    text-decoration: none;
 }
 
 .starButton {
@@ -579,7 +421,7 @@ h4 {
     border-radius: 0.5em;
     background: var(--primary);
     width: 15rem;
-    height: 5rem;
+    height: 3rem;
     color: white;
     font-size: 1.5em;
     box-shadow: 0 8px #010311;
@@ -591,7 +433,7 @@ h4 {
     box-shadow: 0 5px #212967;
 }
 
-<<<<<<< HEAD
+
 
 
 .quizz1 {
@@ -599,7 +441,7 @@ h4 {
     display: flex;
     flex-direction: column; 
     align-items: center;
-    margin-top: 10vh;
+    padding-top: 18vh;
 }
 
 
@@ -623,13 +465,12 @@ h4 {
 }
 
 
-
 .fullAnswer img{
     width: 40%;
 }
 
 .fullAnswer img:nth-child(1){
-    width: 70%;
+    width: 80%;
 }
 
 .wrongAnswerRed {
@@ -639,6 +480,7 @@ h4 {
 
 .question{
     width: 100%;
+    display: none;
 }
 
 .question h2{
@@ -669,10 +511,6 @@ h4 {
 }
 
 
-.fullAnswer h3:hover{
-   background: #00ddff;
-}
-
 .fullAnswer h3:nth-child(1){
     border: 2px solid orange;
 }
@@ -694,41 +532,44 @@ h4 {
 }
 
 .btn-nav {
-    font-size: 50px;
     cursor: pointer;
-    
 }
 
 .cont-btn ion-icon{
-    font-size: 1.5em;
+    font-size: 5em;
     color: var(--primary);
 }
 
 
-
-=======
 @media screen and (min-width: 768px) {
 
-
-    .diapo1 {
-        display: grid;
-        height: 60vh;
-        grid-template-rows: 1fr, 1fr, 1fr;
-        grid-template-columns: 1fr, 1fr;
-        margin-left: 5rem;
-        margin-right: 5rem;
+    .header div{
+        height: 12vh;
     }
-
-    .diapo1-wild {
-        display: grid;
-        height: 60vh;
-        grid-template-rows: 1fr, 1fr, 1fr;
-        grid-template-columns: 1fr, 1fr;
-        margin-left: 5rem;
-        margin-right: 5rem;
-
+    .header ion-icon{
+        font-size: 3.5em;
     }
-
+    .header div a{
+        left: 15%;
+    }
+    .container {
+        padding-top: initial;
+        gap: 6em;
+    }
+    .container a{
+        font-size: 2.5em;
+    }
+    
+    .container ion-icon{
+        font-size: 3em;
+    }
+    .containerTitle{
+        height: 18em;
+    }
+    .team{
+        padding-top: 24vh;
+        height: 100vh;
+    }
     .questionfinal {
         display: grid;
         grid-template-rows: 2fr, 1fr, 1fr;
@@ -747,29 +588,26 @@ h4 {
         font-size: 5vw;
     }
 
-
+.containerCard p{
+    font-size: 1.3em;
+}
 
     .footer {
         background: #131734;
         display: none;
         bottom: 0;
         width: 100%;
-        height: 20vh;
     }
-
     .footer.scroll1 {
         display: block;
         position: fixed;
         width: 100%;
         background-color: #131734;
     }
-
     .cannele img {
-
         width: 20vw;
         height: 20vh;
     }
-
     .scorecannele {
         font-size: 2.5em;
         color: rgb(236, 11, 11);
@@ -777,15 +615,11 @@ h4 {
         left: 24.5%;
         top: 44%;
     }
-
-
-
-    .macaron img {
-
-        width: 20vw;
-        height: 18vh;
-    }
-
+.macaron{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
     .scoremacaron {
         font-size: 2.5em;
         color: rgb(236, 11, 11);
@@ -793,48 +627,40 @@ h4 {
         left: 76%;
         top: 44%;
     }
-
     .bigContainer {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
+        gap: 10em;
     }
-
     .card {
         width: 30em;
     }
-
+    
     .modal {
         display: none;
         position: absolute;
         top: 110%;
         left: center;
     }
-
     .classModal {
         border: black solid 1px;
-        padding: 1em;
+        padding: em;
         height: 40em;
-        width: 40em;
+        width: 30em;
         background: #fff;
         border-radius: 1em;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-
-
-
     .classModal h3 {
         margin-top: 1em;
         margin-bottom: 1em;
         font-size: 2em;
     }
-
     .classModal img {
-
-        width: 20em;
+         width: 22em;
     }
-
     #btnClose {
         display: flex;
         align-items: center;
@@ -844,85 +670,109 @@ h4 {
         border: solid 1px black;
         border-radius: 0.5em;
         background: var(--primary);
-        width: 10rem;
-        height: 7rem;
+        width: 7em;
+        height: 2em;
         color: white;
-        font-size: 3em;
+        font-size: 2em;
         box-shadow: 0 6px #303c91;
         padding: 0.6em;
     }
-
     .header ion-icon {
         font-size: 3.5em;
     }
-
     .header div a {
         left: 15%;
     }
-
     .container {
         padding-top: initial;
         gap: 10em;
     }
-
     .container a {
         font-size: 2.5em;
     }
-
     .container ion-icon {
         font-size: 3em;
     }
-
     .containerTitle {
         height: 18em;
     }
-
     .team {
-
         padding-top: 15vh;
         height: 100vh;
+        background: url(/assets/bridge-4120830_1920\ copie.jpg);
+        background-size: cover;
+        background-position: center;
     }
-
-
-
-
-
-
-    .bigContainer {
-        gap: 2em;
+    .fullAnswer img:nth-child(1){
+        width: 60%;
     }
-
-
-    /* slide */
-    /* media screen */
-    .fullAnswer {
-        display: grid;
-        /* align-items: center; */
-        /* justify-content: center;
-        flex-direction: column; */
-        /* grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr); */
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        border: 1px solid rgb(0, 252, 13);
-        text-align: center;
+    .slider{
+        width: 60%;
     }
-
-    /* media screen */
-    .wrongAnswer {
-        padding: 50px;
-        margin: 10px;
-        border-radius: 50% 20% / 10% 40%;
-        background-color: rgb(0, 26, 255);
-    }
-
-    /* media screen */
-    .rightAnswer {
-        padding: 50px;
-        margin: 10px;
-        border-radius: 50% 20% / 10% 40%;
-        background-color: rgb(0, 26, 255);
-    }
+    .cont-btn {
+    margin-top: 1em;
+}
+.fullAnswer h3{
+    width: 40%;
+    margin: 0.5em;
+}
+.fullAnswer img{
+    width: 35%;
+}
+.choco img {
+    width: 20%;
+}
+ .chocolatine h4{
+    font-size: 3em;
+}
+.pain h4{
+    font-size: 2.5em;
+}
+.questionfinal {
+    width: 50%;
+    height: 70%;
+}
+.questionMort {
+display: flex;
+    justify-content: center;
+}
 
 }
->>>>>>> 45acfc99d84dcc3e9b9a165f7ef24dbbc5eb79b9
+
+.loser{
+    color: #fff;
+}
+
+#winner, #looser{
+    width: 6em;
+    height: 6em;
+}
+
+.btnMort{
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    margin: auto;
+    margin-top: 1em;
+    border: none;
+    background: none;
+    border: solid 1px white;
+    border-radius: 0.5em;
+    background: var(--primary);
+    width: 15rem;
+    height: 3rem;
+    color: white;
+    font-size: 1.5em;
+    box-shadow: 0 8px #010311;
+    padding: 0.6em;
+    margin-bottom: 1.5em;
+}
+
+#btnMort:active {
+    transform: translateY(3px);
+    box-shadow: 0 5px #212967;
+}
+
+.chocolatine, .pain{
+    cursor: pointer;
+}
