--- a/style.css
+++ b/style.css
@@ -238,14 +238,15 @@ h4 {
     box-shadow: 10px 10px 25px 10px rgba(0, 0, 0, 0.361);
     border: 3px solid rgba(255, 255, 255, 0.724);
     background: #f4f6ed;
-    width: 18rem;
-    height: 28em;
+    width: 90vw;
+    height: 60vh;
     border-radius: 1em;
 }
 
 
 
 .containerCard {
+    
     height: 100%;
     padding: 1em;
     border-radius: 1em;
@@ -262,11 +263,10 @@ h4 {
 
 
 .form h2 {
-    position: relative;
     display: flex;
     justify-content: center;
-    margin-top: 1.5em;
-    margin-bottom: 2em;
+    margin-top: 10vh;
+    margin-bottom: 5vw;
     color: #131734;
 }
 
@@ -274,7 +274,14 @@ h4 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 1.5em;
+    padding-top: 1em;
+}
+
+.inputBox h2 {
+    display: flex;
+    justify-content: center;
+    color: var(--primary);
+    margin-top: 1em;
 }
 
 .inputBox input {
@@ -286,7 +293,7 @@ h4 {
     box-shadow: 5px 5px 20px 2px rgba(0, 0, 0, 0.361);
     border: 1px solid rgba(255, 255, 255, 0.724);
     font-size: 1em;
-    margin-top: 1em;
+
 }
 
 .inputBox button {
@@ -299,23 +306,6 @@ h4 {
     cursor: pointer;
     color: var(--secondary);
 }
-
-.boxTeam h2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 1.5em;
-    margin-bottom: 2em;
-    color: #131734;
-}
-
-/* slide */
-
-
-
-
-
-
-
 
 
 
@@ -352,6 +342,7 @@ h4 {
     flex-direction: column;
     align-items: center;
 }
+
 .classModal h3 {
     margin-top: 1em;
     margin-bottom: 1em;
@@ -369,12 +360,12 @@ h4 {
     width: 100%;
 }
 
-.footer.scroll1{
+.footer.scroll1 {
     display: block;
     position: fixed;
 }
 
-.footer img{
+.footer img {
     width: 1em;
 }
 
@@ -421,8 +412,8 @@ h4 {
     border: solid 1px black;
     border-radius: 0.5em;
     background: var(--primary);
-    width: 15rem;
-    height: 5rem;
+    width: 80vw;
+
     color: white;
     font-size: 1.5em;
     box-shadow: 0 8px #010311;
@@ -440,25 +431,25 @@ h4 {
 .quizz1 {
     height: 100vh;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
     margin-top: 10vh;
 }
 
 
-.slider{
+.slider {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 90%;
 }
 
-.fullAnswer{
+.fullAnswer {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    box-shadow:  10px 10px 25px 10px rgba(0, 0, 0, 0.361);
+    box-shadow: 10px 10px 25px 10px rgba(0, 0, 0, 0.361);
     border: 3px solid rgba(255, 255, 255, 0.724);
     background: var(--primary);
     border-radius: 0.8em;
@@ -467,11 +458,11 @@ h4 {
 
 
 
-.fullAnswer img{
+.fullAnswer img {
     width: 40%;
 }
 
-.fullAnswer img:nth-child(1){
+.fullAnswer img:nth-child(1) {
     width: 70%;
 }
 
@@ -480,26 +471,27 @@ h4 {
     cursor: pointer;
 }
 
-.question{
+.question {
     width: 100%;
+    display: none;
 }
 
-.question h2{
+.question h2 {
     text-align: center;
-    font-size: 1.7em;
-    padding-bottom: 3vh;
+    font-size: 7.5vw;
+    padding-bottom: 2.5vh;
 }
 
-.question h2:hover{
+.question h2:hover {
     text-decoration: underline;
 }
 
-.fullAnswer h3{
+.fullAnswer h3 {
     cursor: pointer;
     width: 90%;
     text-align: center;
     color: var(--secondary);
-    font-size: 1.3em;
+    font-size: 6.5vw;
     border: 2px solid yellow;
     padding: 0.5em;
     border-radius: 1em;
@@ -507,26 +499,25 @@ h4 {
     cursor: pointer;
 }
 
-.fullAnswer h3:nth-child(4){
+.fullAnswer h3:nth-child(4) {
     margin-bottom: 0.6em;
 }
 
 
-.fullAnswer h3:hover{
-   background: #00ddff;
-}
 
-.fullAnswer h3:nth-child(1){
+
+.fullAnswer h3:nth-child(1) {
     border: 2px solid orange;
 }
 
-.fullAnswer h3:nth-child(3){
+.fullAnswer h3:nth-child(3) {
     border: 2px solid violet;
 }
 
-.fullAnswer h3:nth-child(4){
+.fullAnswer h3:nth-child(4) {
     border: 2px solid rgb(7, 131, 40);
 }
+
 .rightAnswerGreen {
     background-color: rgb(9, 255, 0);
     cursor: pointer;
@@ -539,67 +530,75 @@ h4 {
 .btn-nav {
     font-size: 50px;
     cursor: pointer;
-    
+
 }
 
-.cont-btn ion-icon{
-    font-size: 1.5em;
+.cont-btn ion-icon {
+    font-size: 15vw;
     color: var(--primary);
 }
 
 
+
+
+
+
+/* media screen attention */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (min-width: 768px) {
 
-    .header div{
+    .header div {
         height: 12vh;
     }
-    .header ion-icon{
+
+    .header ion-icon {
         font-size: 3.5em;
     }
-    .header div a{
+
+    .header div a {
         left: 15%;
     }
+
     .container {
         padding-top: initial;
         gap: 6em;
     }
-    .container a{
+
+    .container a {
         font-size: 2.5em;
     }
-    
-    .container ion-icon{
+
+    .container ion-icon {
         font-size: 3em;
     }
-    .containerTitle{
+
+    .containerTitle {
         height: 18em;
     }
-    .team{
+
+    .team {
         padding-top: 24vh;
         height: 100vh;
     }
-    .bigContainer{
+
+    .bigContainer {
         gap: 2em;
     }
 
 
-    .diapo1 {
-        display: grid;
-        height: 60vh;
-        grid-template-rows: 1fr, 1fr, 1fr;
-        grid-template-columns: 1fr, 1fr;
-        margin-left: 5rem;
-        margin-right: 5rem;
-    }
-
-    .diapo1-wild {
-        display: grid;
-        height: 60vh;
-        grid-template-rows: 1fr, 1fr, 1fr;
-        grid-template-columns: 1fr, 1fr;
-        margin-left: 5rem;
-        margin-right: 5rem;
-
-    }
 
     .questionfinal {
         display: grid;
@@ -616,7 +615,20 @@ h4 {
     }
 
     .questionfinal h4 {
-        font-size: 5vw;
+        font-size: 2vw;
+    }
+
+    .choco {
+        display: flex;
+        justify-content: center;
+
+
+    }
+
+    .choco img {
+
+        width: 20vw;
+
     }
 
 
